Fix square highlighting alignment
https://github.com/ornicar/lila/pull/3881/files

--- a/css/computer.css
+++ b/css/computer.css
@@ -1,5 +1,5 @@
 #board {
-    height: 500px;
-    width: 500px;
+    height: 512px;
+    width: 512px;
     margin: 0 auto;
 }
